Function generate md-file
- add function Generate File to
  + menu
  + context menu
  + keymaps ctrl + al t+g
- it's tested if selected file is md-file
- modified file is save before generation

--- a/package.json
+++ b/package.json
@@ -1,18 +1,20 @@
 {
   "name": "agsbs-atom-package",
   "main": "./lib/agsbs-atom-package",
-  "version": "0.0.0",
-  "description": "A short description of your package",
+  "version": "0.1.0",
+  "description": "This package is used by AGSBS",
+  "author": "Jens Voegler",
   "keywords": [
   ],
   "activationCommands": {
     "atom-workspace": "agsbs-atom-package:toggle"
   },
   "repository": "https://github.com/atom/agsbs-atom-package",
-  "license": "MIT",
+  "license": "LGPL",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
   },
   "dependencies": {
+    "atom-script" :"3.3.0"
   }
 }
