--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "agsbs-atom-package",
 	"main": "./lib/agsbs-atom-package",
-	"version": "0.0.0",
+	"version": "0.1.0",
 	"description": "A short description of your package",
 	"keywords": [
 
@@ -23,6 +23,7 @@
 	},
 
 	"package-dependencies": {
-		"markdown-preview-plus": ""
+		"markdown-preview-plus": "",
+		"keyboard-localization": "1.4.18"
 	}
 }
