--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
 	"name": "agsbs-atom-package",
 	"main": "./lib/agsbs-atom-package",
-	"repository": "https://github.com/TUD-INF-IAI-MCI/agsbs_atom_package",
-	"version": "0.1.0",
-	"description": "A short description of your package",
+	"version": "1.0.0",
+	"description": "Beta-Version",
 	"keywords": [
 
 	],
@@ -12,7 +11,7 @@
     "atom-workspace": "agsbs-atom-package:toggle"
 	},
 
-	"repository": "https://github.com/atom/agsbs-atom-package",
+	"repository": "https://github.com/TUD-INF-IAI-MCI/agsbs_atom_package",
 	"license": "MIT",
 	"engines": {
 		"atom": ">=1.0.0 <2.0.0"
