--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "atom-package-dependencies": "latest"
   },
   "package-dependencies": {
-    "markdown-preview-plus": "",
-    "keyboard-localization": "1.4.18"
+    "markdown-preview-plus": ""
   }
 }
