add missing module iconv

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   },
   "dependencies": {
     "jquery": "^2.1.4",
-    "atom-package-dependencies": "latest"
+    "atom-package-dependencies": "latest",
+    "iconv": "2.2.1"
   },
   "package-dependencies": {
     "markdown-preview-plus": ""
