--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "dependencies": {
     "jquery": "^2.1.4",
     "atom-package-dependencies": "latest",
-    "iconv": "2.2.1"
+    "iconv": "2.2.1",
+    "graceful-fs": "^4.0.0",
+    "minimatch": "3.0.2"
   },
   "package-dependencies": {
     "markdown-preview-plus": ""
