--- a/package.json
+++ b/package.json
@@ -23,10 +23,10 @@
   "dependencies": {
     "jquery": "^2.1.4",
     "atom-package-dependencies": "latest",
-    "iconv": "2.2.1",
     "graceful-fs": "^4.0.0",
     "minimatch": "3.0.2",
     "os-locale": "2.1.0",
+    "iconv-lite": "latest",
     "line-ending-corrector": "1.0.1"
   },
   "package-dependencies": {
