--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "agsbs-atom-package",
   "main": "./lib/agsbs-atom-package",
   "version": "0.18.0",
-  "description": "Beta-Version! This package is developed to make the transcription process more effective.",
+  "description": "This package is developed to make the transcription process more effective of our working group.",
   "keywords": [
     "Markdown",
     "TU Dresden",
@@ -18,10 +18,9 @@
   "repository": "https://github.com/TUD-INF-IAI-MCI/agsbs_atom_package",
   "license": "MIT",
   "engines": {
-    "atom": ">=1.0.0 <2.0.0"
+    "atom": ">=1.25.0 <2.0.0"
   },
-  "dependencies": {
-    "jquery": "^2.1.4",
+  "dependencies": {    
     "atom-package-dependencies": "latest",
     "graceful-fs": "^4.0.0",
     "minimatch": "3.0.2",
