--- a/.travis.yml
+++ b/.travis.yml
@@ -8,11 +8,11 @@ env:
 
   matrix:
     - ATOM_CHANNEL=stable
-    - ATOM_CHANNEL=beta
 
 os:
   - linux
   - osx
+  - windows
 
 ### Generic setup follows ###
 script:
