--- a/.travis.yml
+++ b/.travis.yml
@@ -1,45 +1,12 @@
-### Project specific config ###
-language: generic
-
-env:
-  global:
-    - APM_TEST_PACKAGES=""
-    - ATOM_LINT_WITH_BUNDLED_NODE="true"
-
-  matrix:
-    - ATOM_CHANNEL=stable
-
-os:
-  - linux
-  - osx
-  - windows
-
-### Generic setup follows ###
-script:
-  - curl -s -O https://raw.githubusercontent.com/atom/ci/master/build-package.sh
-  - chmod u+x build-package.sh
-  - ./build-package.sh
+language: objective-c
 
 notifications:
   email:
     on_success: never
     on_failure: change
 
-# branches:
-#   only:
-#     - master
+env:
+  - ATOM_CHANNEL=stable
+  - ATOM_CHANNEL=beta
 
-git:
-  depth: 10
-
-sudo: false
-
-dist: trusty
-
-addons:
-  apt:
-    packages:
-    - build-essential
-    - fakeroot
-    - git
-    - libsecret-1-dev
+script: 'curl -s https://raw.githubusercontent.com/atom/ci/master/build-package.sh | sh'
