--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,9 @@
-language: objective-c
+language: generic
 
 notifications:
   email:
     on_success: never
     on_failure: change
 
-env:
-  - ATOM_CHANNEL=stable
-  - ATOM_CHANNEL=beta
 
 script: 'curl -s https://raw.githubusercontent.com/atom/ci/master/build-package.sh | sh'
