--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "atom-package-dependencies": "latest",
+    "git-plus": "latest",
     "graceful-fs": "^4.0.0",
     "minimatch": "3.0.2",
     "os-locale": "2.1.0",
